a1/brendan_gordon/TEST_PROGRAMS/invalidtype/scott_cooper/duplicate_vardecl.min
var x : int;
var y : string;
var x : int;

